# vvk-charts-mcp

./: .gitignore  AGENTS.md  LICENSE  README.md  README_ru.md  pyproject.toml
ai/: vvk-charts-agent.md  vvk-charts-skill.md
src/vvk_charts_mcp/: __init__.py  client.py  server.py
src/vvk_charts_mcp/charts/: __init__.py  area.py  bar.py  base.py  line.py  pie.py  scatter.py  theme_presets.py
src/vvk_charts_mcp/terminal/: __init__.py  renderer.py  themes.py
src/vvk_charts_mcp/utils/: __init__.py  export.py
