[project]
name = "vvk-charts-mcp"
version = "0.1.0"
description = "MCP server for creating modern charts and diagrams with customizable themes"
authors = [{ name = "valderan" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "charts", "plotly", "visualization", "diagrams"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "plotly>=5.18.0",
    "kaleido>=0.2.1",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
vvk-charts-mcp = "vvk_charts_mcp.server:main"
vvk-charts-cli = "vvk_charts_mcp.client:main"

[project.urls]
Homepage = "https://github.com/valderan/vvk-charts-mcp"
Repository = "https://github.com/valderan/vvk-charts-mcp"
Issues = "https://github.com/valderan/vvk-charts-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vvk_charts_mcp"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
